# rustfm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  background.rs  clipboard.rs  config.rs  events.rs  fs_ops.rs  fuzzy.rs  git.rs  main.rs  metadata.rs  opener.rs  panel.rs  preview.rs  sidebar.rs  theme.rs  ui.rs
